--- a/Appartoo/src/Appartoo/UserBundle/Resources/config/routing.yml
+++ b/Appartoo/src/Appartoo/UserBundle/Resources/config/routing.yml
@@ -12,3 +12,8 @@ appartoo_user_modif:
   path:     /modif
   defaults:
     _controller: AppartooUserBundle:User:modif
+
+appartoo_users:
+  path:   /users
+  defaults:
+    _controller: AppartooUserBundle:User:getUsers
