--- a/Appartoo/app/config/config.yml
+++ b/Appartoo/app/config/config.yml
@@ -16,6 +16,12 @@ fos_user:
         address: "noreply@yourcompany.com"
         sender_name: "No Reply"
 
+assetic:
+  debug:          '%kernel.debug%'
+  use_controller: '%kernel.debug%'
+
+
+
 parameters:
     locale: fr
 
@@ -31,7 +37,8 @@ framework:
     form:            ~
     csrf_protection: ~
     validation:      { enable_annotations: true }
-    #serializer:      { enable_annotations: true }
+    serializer:
+        enabled: true
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
